Areas de Git: Working Directory

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
+	<header id="header">
 		<meta charset="UTF-8">
 		<title>GIT</title>
-	</head>
+	</header>
 	<body>
 		<h1>Git Desarrolo colaborativo<h1/>
+		
 				<p> sistema de control de versiones</p>
+		<section>
+			<h2>Areas de Git</h2>
+			<article>
+				<h3>Working Directory</h3>
+				<p>
+				El area de trabajo hacer referencia a la carpoeta donde creamos el 
+				repositorio, muy rara vez utilizaremos la linea de comandos en esta 
+				zona, pero es donde realizaremos todas las modificaciones realcionadas
+				con nuestro proyecto
+				</p>
+			</article>
+		</section>
 	</body>
-
-	<html>
+		
+	</html>
 
