Areas de Git: Staging Area(INDEX)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 				con nuestro proyecto
 				</p>
 			</article>
+			<article>
+				<h3>
+					Staging Area (INDEX)
+				</h3>
+				<p>
+					El area de control de cmabios corresponde al archivo que <em> se encuentra en la carpeta .git</em> que se crea al iniciar un repositorio. Aqui se registran los archivos a los que vamos a hacerle seguimiento y es el punto de comparacion para confirmar dichos cambios. Es necesario agregar los archivos con los que estemos trabajando a dicha area paara avanzar con el historial de cambios, 
+				</p>
+			</article>
 		</section>
 	</body>
 		
