Areas de Git: Repository

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 					Staging Area (INDEX)
 				</h3>
 				<p>
-					El area de control de cmabios corresponde al archivo que <em> se encuentra en la carpeta .git</em> que se crea al iniciar un repositorio. Aqui se registran los archivos a los que vamos a hacerle seguimiento y es el punto de comparacion para confirmar dichos cambios. Es necesario agregar los archivos con los que estemos trabajando a dicha area paara avanzar con el historial de cambios, 
+					El area de control de cmabios corresponde al archivo que <em> se encuentra en la carpeta .git</em> que se crea al iniciar un repositorio. Aqui se registran los archivos a los que vamos a hacerle seguimiento y es el punto de comparacion para confirmar dichos cambios. Es necesario agregar los archivos con los que estemos trabajando a dicha area paara avanzar con el historial de cambios, ya que git a utilizar el comando <strong>git add</strong> realiza una captura del codigo
+				</p>
+			</article>
+			<article>
+				<h3>
+					Repository (Local/Remote)
+				</h3>
+				<p>
+					El repositorio corresponde a la bas de datos donde se almancena los cambios en formato <strong>BLOB(Binary Object File)</strong> y es el lugar al que podemos acceder  cada vez que necesitemos revisar algun estado anterior de nuestro proyecto. Esto es posible gracias a los <em>commits</em> identificados mediante un numero de HASH.
 				</p>
 			</article>
 		</section>
